# afterthoughts

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LITERATURE.md  Makefile  NAMING.md  NOTICE  README.md  README.rst  THIRD_PARTY_NOTICES  pyproject.toml  requirements.txt  requirements_dev.txt  test_max_chunk_tokens.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
afterthoughts/: __init__.py  avail.py  chunk.py  encode.py  pca.py  quantize.py  tokenize.py  utils.py  validation.py
afterthoughts_placeholder/: README.md  pyproject.toml
afterthoughts_placeholder/afterthoughts/: __init__.py
benchmark/: benchmark_text_reconstruction.py
docs/: Makefile  conf.py  gunther-et-al-2024-differences.md  index.rst  installation.rst  make.bat  plan-late-chunking-alignment.md  usage.rst
embed_gram/: __init__.py  embed_gram.py
finephrase/: __init__.py  available.py  data.py  finephrase.py  pca.py  phrase_utils.py  sentence_utils.py  tokenize.py  utils.py
grammatron/: grammatron.py
literature/: README.md  colbert.md  colbertv2.md  contextual_retrieval.md  hierarchical_segmentation.md  late_chunking.md  longembed.md  sedr.md
notebooks/: colbertv2_explained.ipynb  compare.ipynb  dev.ipynb  lite_encoder_demo.ipynb
phrase_foundry/: __init__.py  phrase_foundry.py  utils.py
scripts/: benchmark_compile.py  fetch_papers.sh
tests/: __init__.py  conftest.py  test_alignment.py  test_chunk.py  test_embed_gram.py  test_encode.py  test_finephrase.py  test_grammatron.py  test_late_chunking_paper.py  test_pca.py  test_phrase_foundry.py  test_quantize.py  test_sentence_utils.py  test_tokenize.py  test_utils.py  test_validation.py
