[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afterthoughts"
version = "0.1.0"
description = "Generate fine-grained contextualized phrase embeddings with transformers."
readme = "README.md"
authors = [
  {name = "Nicholas Gigliotti", email = "ndgigliotti@gmail.com"}
]
maintainers = [
  {name = "Nicholas Gigliotti", email = "ndgigliotti@gmail.com"}
]
classifiers = [

]
license = {text = "Apache-2.0"}
dependencies = [
    "blingfire",
    "joblib",
    "numpy",
    "polars",
    "torch",
    "tqdm",
    "transformers",
]

[project.optional-dependencies]
pandas = [
    "pandas",
]
dev = [
    "coverage",  # testing
    "pre-commit",  # git hooks
    "pyright",  # type checking
    "pytest",  # testing
    "ruff",  # linting & formatting
]

[project.urls]

bugs = "https://github.com/ndgigliotti/finephrase/issues"
changelog = "https://github.com/ndgigliotti/finephrase/blob/master/changelog.md"
homepage = "https://github.com/ndgigliotti/finephrase"

[tool.setuptools]
packages = ["afterthoughts"]

[tool.setuptools.package-data]
"*" = ["*.*"]




# Pyright
# -------

[tool.pyright]
include = ["afterthoughts"]
exclude = ["tests", "benchmarks"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
# Disable checks that are primarily triggered by incorrect transformers/tokenizers stubs
reportArgumentType = false
reportReturnType = false
reportGeneralTypeIssues = false
reportCallIssue = false
reportOperatorIssue = false
reportIndexIssue = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportOptionalIterable = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # pyflakes (includes F401 unused imports)
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (let formatter handle it)
    "E731",   # lambda assignment (sometimes cleaner)
    "SIM108", # ternary operator (not always clearer)
    "RUF005", # list concatenation is fine
    "UP038",  # isinstance(x, (A, B)) is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # allow test function redefinition for parametrize patterns

[tool.ruff.lint.isort]
known-first-party = ["afterthoughts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
filterwarnings = ["ignore::DeprecationWarning"]
