[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afterthoughts"
version = "0.0.1"
description = "Late chunking for transformer embeddings - chunk after the model, not before."
readme = "README.md"
authors = [
  {name = "Nicholas Gigliotti", email = "ndgigliotti@gmail.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/ndgigliotti/afterthoughts"

[tool.setuptools]
packages = ["afterthoughts"]
